--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,10 +1,9 @@
 ---
-
 driver:
   name: vagrant
 provisioner:
   name: puppet_apply
-  test_repo_uri: "https://github.com/TelekomLabs/tests-apache-hardening.git"
+  test_repo_uri: https://github.com/TelekomLabs/tests-apache-hardening.git
 platforms:
 - name: ubuntu-12.04
   driver_config:
@@ -20,12 +19,12 @@ platforms:
     box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_centos-6.4_provisionerless.box
 - name: centos-6.5
   driver_config:
-     box: opscode-centos-6.5
-     box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.5_chef-provisionerless.box
-# - name: oracle-6.4
-#   driver_config:
-#     box: oracle-6.4
-#     box_url: https://storage.us2.oraclecloud.com/v1/istoilis-istoilis/vagrant/oel64-64.box
+    box: opscode-centos-6.5
+    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.5_chef-provisionerless.box
+- name: oracle-6.4
+  driver_config:
+    box: oracle-6.4
+    box_url: https://storage.us2.oraclecloud.com/v1/istoilis-istoilis/vagrant/oel64-64.box
 - name: oracle-6.5
   driver_config:
     box: oracle-6.5
@@ -33,13 +32,11 @@ platforms:
 - name: debian-6
   driver_config:
     box: debian-6
-    box_url: https://googledrive.com/host/0B83ZToJ3fGtDeE9KWm1sWndZdGs/debian-6.0.10-amd64_virtualbox.box
+    box_url: https://s3.eu-central-1.amazonaws.com/ffuenf-vagrantboxes/debian/debian-6.0.10-amd64_virtualbox.box
 - name: debian-7
   driver_config:
     box: debian-7
-    box_url: https://googledrive.com/host/0B83ZToJ3fGtDVC1DeVVzc3lkc0U/debian-7.6.0-amd64_virtualbox.box  
+    box_url: https://s3.eu-central-1.amazonaws.com/ffuenf-vagrantboxes/debian/debian-7.7.0-amd64_virtualbox.box
 suites:
 - name: default
   manifest: site.pp
-
-
