--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,12 +1,9 @@
+---
 AllCops:
   Exclude:
-    - vendor/**
-    - metadata.rb
-    - '**/Puppetfile'
-    - Puppetfile
-    - Gemfile
-    - 'test/integration/**/*'
-
+  - vendor/**/*
+  - test/**/*
+  - Puppetfile
 Documentation:
   Enabled: false
 AlignParameters:
@@ -18,6 +15,12 @@ HashSyntax:
 LineLength:
   Enabled: false
 MethodLength:
-  Max: 30
+  Max: 40
 NumericLiterals:
   MinDigits: 10
+Metrics/CyclomaticComplexity:
+  Max: 10
+Metrics/PerceivedComplexity:
+  Max: 10
+Metrics/AbcSize:
+  Max: 29
