--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ rvm:
   - 2.1.0
 script: bundle exec rake test
 env:
+  - PUPPET_VERSION="~> 4.5.0"
+  - PUPPET_VERSION="~> 4.4.0"
+  - PUPPET_VERSION="~> 4.3.0"
+  - PUPPET_VERSION="~> 4.2.0"
+  - PUPPET_VERSION="~> 4.1.0"
   - PUPPET_VERSION="~> 4.0.0"
   - PUPPET_VERSION="~> 3.7.5"
   - PUPPET_VERSION="~> 3.6.2"
